[package]
name = "rustyglot"
version = "0.1.0"
authors = ["Nathan Koppel <nathankoppel0@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

shakmaty="0.27"
pgn-reader="0.26"
serde_json={version = "1.0", features = ["unbounded_depth"]}
serde_stacker="0.1"
serde="1.0"
nohash-hasher = "0.2"
